# image-processing

./: .gitignore  README  README.md
1-cropping-image/: main.py  pyproject.toml
2-animated-image-gif/: main.py  pyproject.toml  report.tex
3-basic-operation-image/: pyproject.toml
3-basic-operation-image/1-arithmetic-operation/: Cargo.toml
3-basic-operation-image/1-arithmetic-operation/src/: main-addition-scalar.rs  main-multiplication-scalar.rs  main-multiplication.rs  main-substraction.rs  main_addition.rs
3-basic-operation-image/2-boolean-operation/: Cargo.toml
3-basic-operation-image/2-boolean-operation/src/: main.rs
3-basic-operation-image/3-geometry-operation/: Cargo.toml
3-basic-operation-image/3-geometry-operation/src/: main.rs
3-basic-operation-image/report/: report.bcf-SAVE-ERROR  report.tex
